--- a/kab-kota/susun/create.html
+++ b/kab-kota/susun/create.html
@@ -118,9 +118,9 @@
                         <svg class="shrink-0 w-5 h-5 text-indigo-600" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 14 12 8l8 6M4 8l8-6 8 6M4 20l8-6 8 6" />
+                                d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
                 <li>
@@ -163,7 +163,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Report</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Report User</span>
                     </a>
                 </li>
                 <li>
@@ -208,7 +208,7 @@
                                     clip-rule="evenodd"></path>
                             </svg>
                             <a href="./index.html"
-                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Penyusunan</a>
+                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Project</a>
                         </div>
                     </li>
                     <li>
