--- a/kab-kota/user/profile.html
+++ b/kab-kota/user/profile.html
@@ -77,9 +77,9 @@
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
                             viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 14 12 8l8 6M4 8l8-6 8 6M4 20l8-6 8 6" />
+                                d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
                 <li>
@@ -122,7 +122,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Report</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Report User</span>
                     </a>
                 </li>
                 <li>
@@ -194,30 +194,70 @@
 
                 <!-- Form Content -->
                 <div class="pt-24 px-6 md:px-12 pb-10">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                        <!-- Left Column -->
-                        <div class="space-y-6">
-                            <!-- Nama -->
-                            <div>
-                                <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
-                                    Nama
-                                </label>
-                                <input type="text" id="nama" value="Budi Santoso" disabled readonly
-                                    class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-500 cursor-not-allowed select-none">
-                            </div>
+                    <!-- Row 1: Nama & NIK -->
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
 
-                            <!-- NIK -->
-                            <div>
-                                <label for="nik" class="block text-sm font-semibold text-gray-700 mb-2">
-                                    NIK
-                                </label>
-                                <input type="text" id="nik" value="121218826490127485271" disabled readonly
-                                    class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-500 cursor-not-allowed select-none">
-                            </div>
+                        <!-- Nama -->
+                        <div>
+                            <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Nama Lengkap
+                            </label>
+                            <input type="text" id="nama" value="Budi Santoso" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
                         </div>
 
-                        <!-- Right Column -->
-                        <div class="space-y-6">
+                        <!-- NIK -->
+                        <div>
+                            <label for="nik" class="block text-sm font-semibold text-gray-700 mb-2">
+                                NIK
+                            </label>
+                            <input type="text" id="nik" value="3674012345678901" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+                    </div>
+
+                    <!-- Row 2: Email, Phone, Instansi -->
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-6">
+
+                        <!-- Email -->
+                        <div>
+                            <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Email
+                            </label>
+                            <input type="email" id="email" value="budi.santoso@jakbar.go.id" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+
+                        <!-- Nomor Handphone -->
+                        <div>
+                            <label for="phone" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Nomor Handphone
+                            </label>
+                            <input type="tel" id="phone" value="081987654321" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+
+                        <!-- Instansi -->
+                        <div>
+                            <label for="instansi" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Instansi
+                            </label>
+                            <input type="text" id="instansi" value="Dinas Ketenagakerjaan Kota Jakarta Barat" disabled
+                                readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+                    </div>
+
+                    <!-- Divider -->
+                    <div class="border-t border-gray-200 my-8"></div>
+
+                    <!-- Row 3: Password Section -->
+                    <div>
+                        <h2 class="text-xl font-bold text-gray-900 mb-2">Ubah Password</h2>
+                        <p class="text-sm text-gray-600 mb-6">Kosongkan jika tidak ingin mengubah password</p>
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+
+
                             <!-- Password -->
                             <div>
                                 <label for="password" class="block text-sm font-semibold text-gray-700 mb-2">
