--- a/provinsi/susun/create.html
+++ b/provinsi/susun/create.html
@@ -118,9 +118,9 @@
                         <svg class="shrink-0 w-5 h-5 text-indigo-600" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 14 12 8l8 6M4 8l8-6 8 6M4 20l8-6 8 6" />
+                                d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
                 <li>
@@ -160,10 +160,10 @@
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
                             viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
+                                d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi RTK</span>
                     </a>
                 </li>
                 <li>
@@ -208,7 +208,7 @@
                                     clip-rule="evenodd"></path>
                             </svg>
                             <a href="./index.html"
-                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Penyusunan</a>
+                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Project</a>
                         </div>
                     </li>
                     <li>
@@ -266,6 +266,40 @@
                             <option value="Dra. Sari Indah">Dra. Sari Indah</option>
                             <option value="M. Rizki Pratama, S.T.">M. Rizki Pratama, S.T.</option>
                         </select>
+                    </div>
+
+                    <!-- Anggota Tim (Multiple Select) -->
+                    <div>
+                        <label for="teamMembers" class="block text-sm font-medium text-gray-700 mb-2">
+                            Anggota Tim <span class="text-gray-500 text-xs">(Opsional, bisa pilih lebih dari
+                                satu)</span>
+                        </label>
+                        <select id="teamMembers" name="teamMembers[]" multiple
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
+                            style="min-height: 200px;">
+                            <option value="Dr. Ahmad Wijaya">Dr. Ahmad Wijaya</option>
+                            <option value="Ir. Siti Nurhaliza">Ir. Siti Nurhaliza</option>
+                            <option value="Budi Santoso, S.E.">Budi Santoso, S.E.</option>
+                            <option value="Dr. Rina Kusuma">Dr. Rina Kusuma</option>
+                            <option value="dr. Hendra Pratama">dr. Hendra Pratama</option>
+                            <option value="Prof. Dewi Lestari">Prof. Dewi Lestari</option>
+                            <option value="Ir. Bambang Suryanto">Ir. Bambang Suryanto</option>
+                            <option value="Andi Firmansyah, S.T.">Andi Firmansyah, S.T.</option>
+                            <option value="Dr. Rudi Hartono">Dr. Rudi Hartono</option>
+                            <option value="Maya Sari, M.M.">Maya Sari, M.M.</option>
+                            <option value="Dr. Agus Setiawan">Dr. Agus Setiawan</option>
+                            <option value="Ir. Lina Marlina">Ir. Lina Marlina</option>
+                            <option value="Prof. Dr. Budi Utomo">Prof. Dr. Budi Utomo</option>
+                            <option value="Dra. Sari Indah">Dra. Sari Indah</option>
+                            <option value="M. Rizki Pratama, S.T.">M. Rizki Pratama, S.T.</option>
+                            <option value="Ir. Diana Putri">Ir. Diana Putri</option>
+                            <option value="Dr. Eko Wahyudi">Dr. Eko Wahyudi</option>
+                            <option value="Ir. Fitri Handayani">Ir. Fitri Handayani</option>
+                            <option value="Prof. Hadi Susanto">Prof. Hadi Susanto</option>
+                            <option value="Dra. Indah Permatasari">Dra. Indah Permatasari</option>
+                        </select>
+                        <p class="mt-1 text-xs text-gray-500">Gunakan fitur pencarian untuk menemukan anggota tim dengan
+                            cepat</p>
                     </div>
 
                     <!-- Action Buttons -->
@@ -327,6 +361,16 @@
                         allowClear: true,
                         width: '100%'
                     });
+
+                    $('#teamMembers').select2({
+                        placeholder: 'Pilih Anggota Tim',
+                        allowClear: true,
+                        width: '100%',
+                        closeOnSelect: false
+                    });
+
+                    // Set height for Select2 container
+                    $('.select2-selection--multiple').css('min-height', '40px');
                 });
 
                 // Form submission handler
