--- a/pusat/susun/create.html
+++ b/pusat/susun/create.html
@@ -17,7 +17,7 @@
             font-family: 'Inter', sans-serif;
         }
 
-        /* Select2 Custom Styling */
+        /* Select2 Custom Styling - Single Select */
         .select2-container--default .select2-selection--single {
             height: 42px;
             border: 1px solid #d1d5db;
@@ -52,6 +52,89 @@
 
         .select2-container--default .select2-results__option--highlighted[aria-selected] {
             background-color: #6366f1;
+        }
+
+        /* Select2 Multiple Selection Styling - IMPROVED */
+        .select2-container--default .select2-selection--multiple {
+            min-height: 42px;
+            border: 1px solid #d1d5db;
+            border-radius: 0.5rem;
+            padding: 0.25rem 0.5rem;
+        }
+
+        .select2-container--default.select2-container--focus .select2-selection--multiple {
+            border-color: #6366f1;
+            box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.2);
+        }
+
+        /* FIXED: Choice items with better layout */
+        .select2-container--default .select2-selection--multiple .select2-selection__choice {
+            background-color: #6366f1;
+            border: none;
+            border-radius: 0.375rem;
+            padding: 0.25rem 1.75rem 0.25rem 1.25rem;
+            /* Extra right padding for remove button */
+            color: white;
+            font-size: 0.875rem;
+            position: relative;
+            margin-right: 0.375rem;
+            margin-bottom: 0.25rem;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            max-width: 200px;
+            display: inline-flex;
+            align-items: center;
+            line-height: 1.4;
+        }
+
+        /* FIXED: Remove button positioned absolutely on the right */
+        .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+            color: white;
+            position: absolute;
+            right: 0.25rem;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 1.25rem;
+            height: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1rem;
+            font-weight: bold;
+            line-height: 1;
+            cursor: pointer;
+            border-radius: 0.125rem;
+            transition: all 0.2s ease;
+        }
+
+        .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
+            color: #fca5a5;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        /* Ensure text doesn't overflow */
+        .select2-container--default .select2-selection--multiple .select2-selection__choice span {
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            padding-right: 0.5rem;
+        }
+
+        /* Search field styling */
+        .select2-container--default .select2-search--inline .select2-search__field {
+            margin-top: 0.25rem;
+            margin-left: 0.25rem;
+            min-width: 100px;
+            height: 26px;
+        }
+
+        /* For longer text in choices */
+        .select2-container--default .select2-selection--multiple .select2-selection__choice:hover {
+            overflow: visible;
+            white-space: normal;
+            z-index: 10;
         }
     </style>
 </head>
@@ -123,18 +206,7 @@
                         <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
-                    </a>
-                </li>
+
                 <li>
                     <button type="button" data-dropdown-toggle="dropdown-pelaporan"
                         class="flex items-center w-full px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
@@ -280,6 +352,39 @@
                         </select>
                     </div>
 
+                    <!-- Anggota Tim (Multiple Select) -->
+                    <div>
+                        <label for="teamMembers" class="block text-sm font-medium text-gray-700 mb-2">
+                            Anggota Tim <span class="text-gray-500 text-xs">(Opsional, bisa pilih lebih dari
+                                satu)</span>
+                        </label>
+                        <select id="teamMembers" name="teamMembers[]" multiple
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                            <option value="Dr. Ahmad Wijaya">Dr. Ahmad Wijaya</option>
+                            <option value="Ir. Siti Nurhaliza">Ir. Siti Nurhaliza</option>
+                            <option value="Budi Santoso, S.E.">Budi Santoso, S.E.</option>
+                            <option value="Dr. Rina Kusuma">Dr. Rina Kusuma</option>
+                            <option value="dr. Hendra Pratama">dr. Hendra Pratama</option>
+                            <option value="Prof. Dewi Lestari">Prof. Dewi Lestari</option>
+                            <option value="Ir. Bambang Suryanto">Ir. Bambang Suryanto</option>
+                            <option value="Andi Firmansyah, S.T.">Andi Firmansyah, S.T.</option>
+                            <option value="Dr. Rudi Hartono">Dr. Rudi Hartono</option>
+                            <option value="Maya Sari, M.M.">Maya Sari, M.M.</option>
+                            <option value="Dr. Agus Setiawan">Dr. Agus Setiawan</option>
+                            <option value="Ir. Lina Marlina">Ir. Lina Marlina</option>
+                            <option value="Prof. Dr. Budi Utomo">Prof. Dr. Budi Utomo</option>
+                            <option value="Dra. Sari Indah">Dra. Sari Indah</option>
+                            <option value="M. Rizki Pratama, S.T.">M. Rizki Pratama, S.T.</option>
+                            <option value="Ir. Diana Putri">Ir. Diana Putri</option>
+                            <option value="Dr. Eko Wahyudi">Dr. Eko Wahyudi</option>
+                            <option value="Ir. Fitri Handayani">Ir. Fitri Handayani</option>
+                            <option value="Prof. Hadi Susanto">Prof. Hadi Susanto</option>
+                            <option value="Dra. Indah Permatasari">Dra. Indah Permatasari</option>
+                        </select>
+                        <p class="mt-1 text-xs text-gray-500">Gunakan fitur pencarian untuk menemukan anggota tim dengan
+                            cepat</p>
+                    </div>
+
                     <!-- Action Buttons -->
                     <div class="flex gap-4 pt-4">
                         <a href="./index.html"
@@ -334,10 +439,20 @@
 
                 // Initialize Select2
                 $(document).ready(function () {
+                    // Initialize for Ketua Tim (single select with search)
                     $('#teamLeader').select2({
                         placeholder: 'Pilih Ketua Tim',
                         allowClear: true,
                         width: '100%'
+                    });
+
+                    // Initialize for Anggota Tim (multiple select with search)
+                    $('#teamMembers').select2({
+                        placeholder: 'Pilih Anggota Tim (bisa lebih dari satu)',
+                        allowClear: true,
+                        width: '100%',
+                        closeOnSelect: false,
+                        maximumSelectionLength: 10  // Limit max 10 members
                     });
                 });
 
@@ -347,14 +462,21 @@
 
                     const projectName = document.getElementById('projectName').value;
                     const teamLeader = document.getElementById('teamLeader').value;
+                    const teamMembers = $('#teamMembers').val(); // Get selected values from Select2
 
                     if (!projectName || !teamLeader) {
                         alert('Mohon lengkapi semua field yang diperlukan!');
                         return;
                     }
 
+                    // Prepare team members display
+                    let membersText = 'Tidak ada';
+                    if (teamMembers && teamMembers.length > 0) {
+                        membersText = teamMembers.join(', ');
+                    }
+
                     // Show success message
-                    alert(`Project berhasil dibuat!\n\nNama Project: ${projectName}\nKetua Tim: ${teamLeader}\n\nCatatan: Dalam implementasi nyata, data akan disimpan ke database.`);
+                    alert(`Project berhasil dibuat!\n\nNama Project: ${projectName}\nKetua Tim: ${teamLeader}\nAnggota Tim (${teamMembers ? teamMembers.length : 0}): ${membersText}\n\nCatatan: Dalam implementasi nyata, data akan disimpan ke database.`);
 
                     // Redirect back to list page
                     window.location.href = './index.html';
