--- a/pusat/susun/index.html
+++ b/pusat/susun/index.html
@@ -152,18 +152,7 @@
                         <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 4v16m8-8H4m8-4h.01M12 16h.01M16 12h.01M8 12h.01" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
-                    </a>
-                </li>
+
                 <li>
                     <button type="button" data-dropdown-toggle="dropdown-pelaporan"
                         class="flex items-center w-full px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
@@ -269,10 +258,12 @@
                 <table id="projectsTable" class="display" style="width:100%">
                     <thead>
                         <tr>
-                            <th>No</th>
-                            <th>Project Name</th>
-                            <th>Nama Ketua Tim</th>
-                            <th>Action</th>
+                            <th>Nama</th>
+                            <th>Proyek Dibuat</th>
+                            <th>Proyek Selesai</th>
+                            <th>Durasi</th>
+                            <th>Ketua Tim</th>
+                            <th>Aksi</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -340,31 +331,44 @@
 
         // RTKN Projects Data
         const projectsData = [
-            { name: 'RTKN Nasional 2025-2030', leader: 'Dr. Ahmad Wijaya' },
-            { name: 'RTKN Sektor Industri Manufaktur 2024', leader: 'Ir. Siti Nurhaliza' },
-            { name: 'RTKN Sektor Pariwisata dan Perhotelan 2025', leader: 'Budi Santoso, S.E.' },
-            { name: 'RTKN Sektor Teknologi Informasi 2024-2029', leader: 'Dr. Rina Kusuma' },
-            { name: 'RTKN Sektor Kesehatan dan Farmasi 2025', leader: 'dr. Hendra Pratama' },
-            { name: 'RTKN Sektor Pendidikan 2024-2028', leader: 'Prof. Dewi Lestari' },
-            { name: 'RTKN Sektor Pertanian dan Perkebunan 2025', leader: 'Ir. Bambang Suryanto' },
-            { name: 'RTKN Sektor Konstruksi dan Infrastruktur 2024', leader: 'Andi Firmansyah, S.T.' },
-            { name: 'RTKN Sektor Energi dan Pertambangan 2025-2030', leader: 'Dr. Rudi Hartono' },
-            { name: 'RTKN Sektor Perdagangan dan Ritel 2024', leader: 'Maya Sari, M.M.' }
+            { name: 'RTKN Nasional 2025-2030', leader: 'Dr. Ahmad Wijaya', created: '2024-01-15', completed: '2025-12-31', duration: '24 bulan' },
+            { name: 'RTKN Sektor Industri Manufaktur 2024', leader: 'Ir. Siti Nurhaliza', created: '2024-02-01', completed: '2024-12-31', duration: '11 bulan' },
+            { name: 'RTKN Sektor Pariwisata dan Perhotelan 2025', leader: 'Budi Santoso, S.E.', created: '2024-03-10', completed: '2025-12-31', duration: '22 bulan' },
+            { name: 'RTKN Sektor Teknologi Informasi 2024-2029', leader: 'Dr. Rina Kusuma', created: '2024-01-20', completed: '2029-12-31', duration: '72 bulan' },
+            { name: 'RTKN Sektor Kesehatan dan Farmasi 2025', leader: 'dr. Hendra Pratama', created: '2024-04-05', completed: '2025-12-31', duration: '21 bulan' },
+            { name: 'RTKN Sektor Pendidikan 2024-2028', leader: 'Prof. Dewi Lestari', created: '2024-02-15', completed: '2028-12-31', duration: '58 bulan' },
+            { name: 'RTKN Sektor Pertanian dan Perkebunan 2025', leader: 'Ir. Bambang Suryanto', created: '2024-05-01', completed: '2025-12-31', duration: '20 bulan' },
+            { name: 'RTKN Sektor Konstruksi dan Infrastruktur 2024', leader: 'Andi Firmansyah, S.T.', created: '2024-01-10', completed: '2024-12-31', duration: '12 bulan' },
+            { name: 'RTKN Sektor Energi dan Pertambangan 2025-2030', leader: 'Dr. Rudi Hartono', created: '2024-03-01', completed: '2030-12-31', duration: '82 bulan' },
+            { name: 'RTKN Sektor Perdagangan dan Ritel 2024', leader: 'Maya Sari, M.M.', created: '2024-06-01', completed: '2024-12-31', duration: '7 bulan' }
         ];
 
         // Transform data for DataTable
         const tableData = projectsData.map((project, index) => {
             return [
-                index + 1,
                 project.name,
+                project.created,
+                project.completed,
+                project.duration,
                 project.leader,
-                `<button onclick="viewProject('${project.name}')" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
-                    <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
-                    </svg>
-                    View
-                </button>`
+                `<div class="flex gap-2">
+                    <button onclick="viewProject('${project.name}')" class="px-3 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center" title="Lihat Detail">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
+                        </svg>
+                    </button>
+                    <button onclick="editProject(${index + 1}, '${project.name}')" class="px-3 py-2 bg-amber-500 text-white text-sm rounded-lg hover:bg-amber-600 transition-colors inline-flex items-center" title="Edit">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
+                        </svg>
+                    </button>
+                    <button onclick="deleteProject(${index + 1}, '${project.name}')" class="px-3 py-2 bg-red-600 text-white text-sm rounded-lg hover:bg-red-700 transition-colors inline-flex items-center" title="Hapus">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
+                        </svg>
+                    </button>
+                </div>`
             ];
         });
 
@@ -406,6 +410,24 @@
             pdfFrame.src = '../../assets/UU Nomor 13 Tahun 2003.pdf';
             modal.classList.remove('hidden');
             document.body.style.overflow = 'hidden';
+        }
+
+        // Edit project function
+        function editProject(id, projectName) {
+            // In a real application, this would redirect to edit page or open edit modal
+            alert(`Edit Project:\nID: ${id}\nNama: ${projectName}\n\nFungsi ini akan mengarah ke halaman edit.`);
+            // Example: window.location.href = `create.html?id=${id}&edit=true`;
+        }
+
+        // Delete project function
+        function deleteProject(id, projectName) {
+            if (confirm(`Apakah Anda yakin ingin menghapus project:\n"${projectName}"?\n\nTindakan ini tidak dapat dibatalkan.`)) {
+                // In a real application, this would send delete request to server
+                alert(`Project "${projectName}" berhasil dihapus!`);
+                // Example: send DELETE request to API
+                // After successful deletion, reload the DataTable
+                // $('#projectsTable').DataTable().ajax.reload();
+            }
         }
 
         // Close modal function
