--- a/user/biasa/user/profile.html
+++ b/user/biasa/user/profile.html
@@ -221,30 +221,69 @@
 
                 <!-- Form Content -->
                 <div class="pt-24 px-6 md:px-12 pb-10">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                        <!-- Left Column -->
-                        <div class="space-y-6">
-                            <!-- Nama -->
-                            <div>
-                                <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
-                                    Nama
-                                </label>
-                                <input type="text" id="nama" value="Budi Santoso" disabled readonly
-                                    class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-500 cursor-not-allowed select-none">
-                            </div>
+                    <!-- Row 1: Nama & NIK -->
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
 
-                            <!-- NIK -->
-                            <div>
-                                <label for="nik" class="block text-sm font-semibold text-gray-700 mb-2">
-                                    NIK
-                                </label>
-                                <input type="text" id="nik" value="121218826490127485271" disabled readonly
-                                    class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-500 cursor-not-allowed select-none">
-                            </div>
+                        <!-- Nama -->
+                        <div>
+                            <label for="nama" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Nama Lengkap
+                            </label>
+                            <input type="text" id="nama" value="Budi Santoso" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
                         </div>
 
-                        <!-- Right Column -->
-                        <div class="space-y-6">
+                        <!-- NIK -->
+                        <div>
+                            <label for="nik" class="block text-sm font-semibold text-gray-700 mb-2">
+                                NIK
+                            </label>
+                            <input type="text" id="nik" value="3271012345678901" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+                    </div>
+
+                    <!-- Row 2: Email, Phone, Instansi -->
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-6">
+
+                        <!-- Email -->
+                        <div>
+                            <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Email
+                            </label>
+                            <input type="email" id="email" value="budi.santoso@gmail.com" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+
+                        <!-- Nomor Handphone -->
+                        <div>
+                            <label for="phone" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Nomor Handphone
+                            </label>
+                            <input type="tel" id="phone" value="085612345678" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+
+                        <!-- Instansi -->
+                        <div>
+                            <label for="instansi" class="block text-sm font-semibold text-gray-700 mb-2">
+                                Instansi
+                            </label>
+                            <input type="text" id="instansi" value="PT Maju Bersama Indonesia" disabled readonly
+                                class="w-full px-4 py-3 bg-gray-100 border border-gray-200 rounded-xl text-gray-700 cursor-not-allowed">
+                        </div>
+                    </div>
+
+                    <!-- Divider -->
+                    <div class="border-t border-gray-200 my-8"></div>
+
+                    <!-- Row 3: Password Section -->
+                    <div>
+                        <h2 class="text-xl font-bold text-gray-900 mb-2">Ubah Password</h2>
+                        <p class="text-sm text-gray-600 mb-6">Kosongkan jika tidak ingin mengubah password</p>
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+
+
                             <!-- Password -->
                             <div>
                                 <label for="password" class="block text-sm font-semibold text-gray-700 mb-2">
